# Cargoc

./: Cargo.toml  build.rs  builder.cpp  builder.h  cargoc.toml  todo.md
.fleet/: run.json
src/: command.rs  main.rs  util.rs
test/: Cargoc.toml
test/lib/: Cargoc.toml  lib.h  lib.lib
test/lib/src/: main.c
test/src/: main.c
