[package]
name = "cargoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.3"

[dependencies]
clap = {version = "4.0.11", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.0"
path-absolutize = "3.0.13"
path-slash = "0.x"
